jellyfish-cli/com.ngc.seaside.jellyfish/src/test/resources/invalid-grammar-project/src/main/sd/com/ngc/seaside/threateval/datatype/TrackPriority.sd
package com.ngc.seaside.threateval.datatype

data TrackPriority {
	int trackId
	string sourceId
	float priority {
		"validation": {
			"min": 0.0,
			"max": 1.0
		}
	}
}